# agora-oss

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  docker-compose.yml  mkdocs.yml  prefect.example.yaml  pyproject.toml
agents/: .instructions.md  README.md
agents/coding-agent/: .instructions.md  .prompt.md
agents/datamart-builder/: .instructions.md  .prompt.md
agents/issue-agent/: __init__.py  generate_mart.py
agents/product-owner-agent/: .instructions.md  .prompt.md
apps/api/: README.md
apps/dashboard/: README.md
apps/workers/: README.md  deployments.py
apps/workers/flows/: ingest.py
apps/workers/tasks/: __init__.py  embeddings.py
configs/mappings/drupalorg/: default.mapping.yaml
configs/mappings/wordpressorg/: default.mapping.yaml
configs/policies/: quality-policy.yaml
configs/schemas/: mapping-pack.schema.json  source-config.schema.json
configs/sources/drupalorg/: community-default.yaml
configs/sources/wordpressorg/: community-default.yaml
data/fixtures/: README.md
data/mock/drupalorg/: actors_sample.json  comment.json  issues.json  issues_sample.json  page.json  project_issue.json  project_module.json  projects_sample.json  user.json
data/mock/wordpressorg/: actors_sample.json  plugins_sample.json
data/schema/: issue.schema.yml
docs/: index.md  plan.md
docs/architecture/: index.md
docs/architecture/layers/: agent-layer.md  api-layer.md  config-layer.md  (+8 more)
docs/contracts/: canonical-entities-v1.md  canonical-relations-v1.md  id-strategy-v1.md  index.md  lineage-and-provenance-v1.md  mapping-rules-v1.md  plugin-capabilities-v1.md  plugin-error-model-v1.md  plugin-health-and-observability-v1.md  plugin-interface-v1.md  source-config-schema-v1.md
docs/verification/: contract-test-matrix.md  index.md  phase1-acceptance.md  source-onboarding-checklist.md
infra/: README.md  bootstrap.sh
providers/: README.md  drupal.py
specs/: README.md  mission.md  roadmap.md  stack.md
specs/00-mvp/: acceptance.md  bdd.md  index.md  issue_model.py  requirements.md
specs/phases/: README.md  phase-1.md
tests/bdd/: test_00_mvp.py
workers/agents/: __init__.py  runner.py
(+6 files in other folders)
