[project]
name = "agora-oss"
version = "0.1.0"
description = "Open-source knowledge graph for FLOSS community data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pre-commit>=4.6.0", "pydantic>=2.13.3", "pyyaml>=6.0.2"]

[dependency-groups]
dev = [
    "mypy>=1.11.2",
    "pytest>=8.3.2",
    "ruff>=0.6.9",
    "types-pyyaml>=6.0.12.20250516",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
files = ["apps/api", "tests"]
exclude = ["node_modules"]
